[project]
name = "movie-streamlit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = ["streamlit>=1.43.2", "pandas>=2.2.3", "matplotlib>=3.10.1", "pyarrow>=19.0.1", "altair>=5.5.0"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
test = [
    "pytest>=8.3.5",
]
